<resources>
    <string name="app_name">TallerSergio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragmento">fragmento</string>
    <string name="fragmento_peliculas">-Fragmento peliculas</string>
    <string name="ingresa_tu_usuario">Ingresa tu usuario</string>
    <string name="login">login</string>
    <string name="loginText">Login</string>
    <string name="ingresa_tu_contrase_a">ingresa tu contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="peliculas">Peliculas</string>
    <string name="films">Films</string>
    <string name="favorites">Favorites</string>
    <string name="title_activity_prueba_retrofit">pruebaRetrofit</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_compose">composeActivity</string>
    <string name="title_activity_movies_compose">MoviesCompose</string>
</resources>