<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoviesPrincipalFragment"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/peliculas"
        android:textSize="36sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:text="@string/films"
           />

        <Button
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:text="@string/favorites"
             />
    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/peliculas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout="@layout/fragment_f_movies_second" />


</LinearLayout>